--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,8 @@
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/container2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"></RelativeLayout>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></RelativeLayout>
 
     <TextView
         android:id="@+id/nextRoot"
@@ -22,7 +22,7 @@
         android:text="@string/Next"
         android:textAllCaps="true"
         android:textColor="@color/colorAccent"
-        android:textSize="16dp"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/rootButton"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintHorizontal_bias="0.5"
@@ -204,7 +204,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.75" />
+        app:layout_constraintGuide_percent="0.70" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline14"
@@ -213,20 +213,27 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.125"/>
 
+
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline15"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.80" />
+
     <fragment
         android:id="@+id/youtubeplayerfragment"
         android:name="com.google.android.youtube.player.YouTubePlayerFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="@+id/guideline12"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline11"
         app:layout_constraintHeight_default="percent"
-        app:layout_constraintHeight_percent=".25"
+        app:layout_constraintHeight_percent=".20"
         app:layout_constraintStart_toStartOf="@+id/guideline5"
-        app:layout_constraintTop_toTopOf="@+id/guideline13"
+        app:layout_constraintTop_toTopOf="@+id/guideline15"
         app:layout_constraintWidth_default="percent"
         app:layout_constraintWidth_percent="1" />
-
 
 
 
