--- a/app/src/main/res/layout/fragment_camera2_video.xml
+++ b/app/src/main/res/layout/fragment_camera2_video.xml
@@ -18,25 +18,18 @@ android:layout_width="match_parent"
 android:layout_height="match_parent">
 
 
-
         <Button
             android:id="@+id/video"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_gravity="center"
-            android:text="@string/record" />
-
-        <Button
-            android:id="@+id/info"
-            android:contentDescription="@string/description_info"
-            style="@android:style/Widget.Material.Light.Button.Borderless"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical|right"
-            android:padding="20dp"/>
+            android:layout_centerHorizontal="true"
+            android:text="@string/record"
+            android:background="@drawable/ic_start_recording"/>
 
 
-<com.example.rob.Hypeman.AutoFitTextureView
+
+<com.rob.mcphersondev.Hypeman.AutoFitTextureView
     android:id="@+id/texture"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
