--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -73,7 +73,7 @@
         android:id="@+id/rootButton"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:alpha="0.7"
+        android:alpha="0.8"
         android:gravity="center"
         android:onClick="pressRoot"
         android:text="@string/roots"
@@ -92,7 +92,7 @@
         android:id="@+id/lyricButton"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:alpha="0.7"
+        android:alpha="0.8"
         android:gravity="center"
         android:onClick="pressLowerLyric"
         android:text="@string/lyrics"
@@ -112,7 +112,7 @@
         android:id="@+id/lastLyric"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:alpha="0.7"
+        android:alpha="0.8"
         android:gravity="center"
         android:onClick="pressLast"
         android:text="@string/Last"
@@ -131,7 +131,7 @@
         android:id="@+id/nextLyric"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:alpha="0.7"
+        android:alpha="0.8"
         android:gravity="center"
         android:onClick="pressNext"
         android:text="@string/Next"
@@ -163,6 +163,16 @@
         app:layout_constraintTop_toBottomOf="@+id/rootButton"
         app:layout_constraintWidth_default="percent"
         app:layout_constraintWidth_percent=".18" />
+
+    <ImageView
+        android:id="@+id/headphones"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/hypeman_logo_headphones" />
 
 
     <android.support.constraint.Group
@@ -282,6 +292,7 @@
         app:layout_constraintTop_toTopOf="@+id/guideline15"
         app:layout_constraintWidth_default="percent"
         app:layout_constraintWidth_percent="1" />
+
 
 
 
