--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,4 +13,13 @@
         <item name="android:windowBackground">@drawable/background</item>
     </style>
 
+    <style name="mainTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground">@drawable/background_no_logo</item>
+    </style>
+
+    <style name="galleryTheme" parent="Theme.AppCompat.Light">
+        <item name="android:windowBackground">@drawable/background_no_logo</item>
+
+    </style>
+
 </resources>
