--- a/app/src/main/res/layout/video_card.xml
+++ b/app/src/main/res/layout/video_card.xml
@@ -39,6 +39,7 @@
             android:layout_marginEnd="4dp"
             android:layout_marginBottom="8dp"
             android:text="TextView"
+            android:textColor="@color/cardview_light_background"
             card_view:layout_constraintBottom_toBottomOf="@+id/video_view"
             card_view:layout_constraintEnd_toEndOf="@+id/video_view" />
 
