--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -102,7 +102,7 @@
         android:gravity="center"
         android:onClick="pressRoot"
         android:text="@string/roots"
-        android:background="@drawable/border_radius"
+        android:background="@drawable/ripple_buton_yellow"
         android:textColor="@drawable/button_text_color"
         app:layout_constraintBottom_toTopOf="@+id/guideline3"
         app:layout_constraintEnd_toEndOf="@+id/guideline2"
@@ -121,7 +121,7 @@
         android:gravity="center"
         android:onClick="pressLowerLyric"
         android:text="@string/lyrics"
-        android:background="@drawable/border_radius"
+        android:background="@drawable/ripple_buton_green"
         android:textColor="@drawable/button_text_color"
 
         app:layout_constraintBottom_toTopOf="@+id/guideline9"
@@ -142,7 +142,7 @@
         android:onClick="pressLast"
         android:text="@string/Last"
         android:textColor="@drawable/button_text_color"
-        android:background="@drawable/border_radius"
+        android:background="@drawable/ripple_buton_blue"
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
         app:layout_constraintEnd_toStartOf="@+id/guideline6"
         app:layout_constraintHeight_default="percent"
@@ -160,7 +160,7 @@
         android:gravity="center"
         android:onClick="pressNext"
         android:text="@string/Next"
-        android:background="@drawable/border_radius"
+        android:background="@drawable/ripple_buton_red"
         android:textColor="@drawable/button_text_color"
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
         app:layout_constraintEnd_toStartOf="@+id/guideline11"
@@ -178,7 +178,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:alpha="0.7"
-        android:background="@drawable/border_radius"
+        android:background="@drawable/ripple_buton"
         android:onClick="pressLyric"
         android:text="@string/More"
         android:textColor="@drawable/button_text_color"
