--- a/app/src/main/res/drawable/main_background.xml
+++ b/app/src/main/res/drawable/main_background.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list
-    xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <ripple xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:color="#000000"> <!-- ripple effect color -->
     <item>
         <shape>
             <gradient
@@ -10,6 +12,5 @@
                 android:endColor="@color/cardview_dark_background"/>
         </shape>
     </item>
+    </ripple>
 
-
-</layer-list>
